--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,12 @@
-body {
+.App {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url(./components/photo/8b0f2c1ad43fb72f22d72308cee114f0.jpg);
+  background-size:cover;
 }
 
 code {
